compose file updated

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
             - "8000:8000"
         depends_on:
             - db
+        image: app:django
     db:
         # image: postgres
         # container_name: pgdb_container
